static/css/style.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans);
.btn { display: inline-block; *display: inline; *zoom: 1; padding: 4px 10px 4px; margin-bottom: 0; font-size: 13px; line-height: 18px; color: #333333; text-align: center;text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); vertical-align: middle; background-color: #f5f5f5; background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6); background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6)); background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6); background-image: -o-linear-gradient(top, #ffffff, #e6e6e6); background-image: linear-gradient(top, #ffffff, #e6e6e6); background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#ffffff, endColorstr=#e6e6e6, GradientType=0); border-color: #e6e6e6 #e6e6e6 #e6e6e6; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); border: 1px solid #e6e6e6; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); cursor: pointer; *margin-left: .3em; }
.btn:hover, .btn:active, .btn.active, .btn.disabled, .btn[disabled] { background-color: #e6e6e6; }
.btn-large { padding: 9px 14px; font-size: 15px; line-height: normal; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
.btn:hover { color: #333333; text-decoration: none; background-color: #e6e6e6; background-position: 0 -15px; -webkit-transition: background-position 0.1s linear; -moz-transition: background-position 0.1s linear; -ms-transition: background-position 0.1s linear; -o-transition: background-position 0.1s linear; transition: background-position 0.1s linear; }
.btn-primary, .btn-primary:hover { text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); color: #ffffff; }
.btn-primary.active { color: rgba(255, 255, 255, 0.75); }
.btn-primary { background-color: #4a77d4; background-image: -moz-linear-gradient(top, #6eb6de, #4a77d4); background-image: -ms-linear-gradient(top, #6eb6de, #4a77d4); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6eb6de), to(#4a77d4)); background-image: -webkit-linear-gradient(top, #6eb6de, #4a77d4); background-image: -o-linear-gradient(top, #6eb6de, #4a77d4); background-image: linear-gradient(top, #6eb6de, #4a77d4); background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#6eb6de, endColorstr=#4a77d4, GradientType=0);  border: 1px solid #3762bc; text-shadow: 1px 1px 1px rgba(0,0,0,0.4); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5); }
.btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { filter: none; background-color: #4a77d4; }
.btn-block { width: 100%; display:block; }

* { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box;	font-family:"DM Sans";}

html { width: 100%; height:100%; }

body{
	margin: 0;
	padding: 0;
}

input {
	width:300px;
	margin-bottom: 10px; 
	border: none;
	outline: none;
	padding: 10px;
	font-size: 13px;
	border: 1px solid;
	border-color: #E1E3E6;
	border-radius: 4px;
	-webkit-transition: box-shadow .5s ease;
	-moz-transition: box-shadow .5s ease;
	-o-transition: box-shadow .5s ease;
	-ms-transition: box-shadow .5s ease;
	transition: box-shadow .5s ease;
}

.submit{
	background-color: #4D72F8;
	color:#ffffff;
	border-color: #4D72F8;
}

select {
	width:300px;
	margin-bottom: 10px; 
	border: none;
	outline: none;
	padding: 10px;
	font-size: 13px;
	border: 1px solid #E1E3E6;
	border-radius: 4px;
	-webkit-transition: box-shadow .5s ease;
	-moz-transition: box-shadow .5s ease;
	-o-transition: box-shadow .5s ease;
	-ms-transition: box-shadow .5s ease;
	transition: box-shadow .5s ease;
}

h1,h2,h3,h4,h5,h6{
	color: #404D61;
}

.divider{
	margin-left: -10%;
	margin-block-start: 2%;
	color: #e42626;
	height: 1px;
	background-color: #E1E3E6;
}
.desc{
	margin-left: 10%;
	margin-right: 10%;
	color: #404D61;
}

.inputs{
	margin-left: 10%;
	margin-block-start: 5%;
	display: flex;
}

.down{
	background-color: #4E73F815;
	color:#000000;
	margin-block-start: 2%;
	width:130px;
	height: 30px;
	border-color: #4E73F8;
	border-radius: 8%;
	border-width: 1px;
}

.documentation{
	background-color: #4E73F815;
	color:#000000;
	margin-block-start: 2%;
	width:210px;
	height: 35px;
	border-color: #4D72F8;
	border-radius: 2%;
	border-width: 1px;
}

.sample{
	background-color: #4D72F8;
	color:#ffffff;	
	margin-block-start: 2%;
	border-color: #4D72F8;
	height: 35px;
	width:210px;
	border-radius: 2%;
	border-width: 1px;
}

.submit:hover, .sample:hover{
	background-color: #4e73f8f3;
}

.down:hover,.documentation:hover{
	border-color: #000000;
}

.container{
	margin-left: 10%;
	margin-block-start: 5%;
	padding-bottom: 5%;
	display: block;
}

.main{
	display: flex;
	flex-wrap: wrap;
}

.number{
	padding-top: 1%;
	margin: 2%;
	width: 30px;
	height: 30px;
	border: 0.5px solid #4E73F8;
	border-radius: 100%;
	background-color: #4E73F815;
	text-align:center;
}

.icon{
	margin-top: 0;
	margin-left: 5%;	
	width:100px;
	float: left;
	padding: 0px 6px;
	vertical-align: middle;
	position: relative;
}

.header{
	text-align: left;
	vertical-align: middle;
	margin:100;
	padding: 0;
}

.heading{
	margin-left:20%;
	padding-top:17.537px;
	font-size: 34px;
	color: #4D72F8;
	position: relative;
}

.heading:before{
	content:'Automatic ';
	color: #404D61;
}

.footer{
	height:20px;
    width: 100%;
    background-color: #404D61;
    text-align: center;
	color: #ffffff;
	font-size: smaller;
  }

@media screen and (max-width:510px)
{
	.heading{
		margin-left:20%;
		font-size: 34px;
		padding-top: 0;
		color: #4D72F8;
		position: relative;	
	}
}

@media screen and (max-width: 328px)
{
	.icon{
		width:65px;
	}
	.heading{
		font-size:1.5rem;
	}
}

@media screen and (max-width: 238px)
{
	.heading{
		font:0.2em;
	}
}	

a{
	text-decoration:none;
	color:#ffffff;
}

a:hover{
	color: #E1E3E6;
}

